# shotmd

./: CMakeLists.txt  Makefile  README.md  Shotmd.json  main.cpp  shotmd.cpp  shotmd.h  shotmd.ui
